# aee-conformance

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  BUILD-NOTES.md  README.md  TODO.md  go.mod  go.work  go.work.sum  pyproject.toml
.github/workflows/: ci.yml
aee/: aee_test.go  bmp_test.go  chain_test.go  codes.go  consumer_policy_test.go  imports_test.go  jcs.go  jcs_dos_test.go  jcs_merkle_test.go  jcs_number_test.go  jcs_string_test.go  merkle.go  pae.go  parse_size_test.go  recompute.go  runbinding.go  runbinding_test.go  statement.go  tier.go  types.go  undecodable_test.go  validity.go  vectors_test.go  verify.go
aeetest/: build.go
cmd/aee-verify/: main.go  main_test.go
docs/: complexity-rationales.toml
docs/architecture/: DESIGN_DECISIONS.md
packaging/: conformance-report.json  run_vectors.py
scripts/: coverage-gate.py
spec/: README.md
vectors/: CHANGES.md  MANIFEST.json  gen_manifest.py
vectors/accept/: INDEX.md  gen_valid_vectors.py  ok-001-caught-intercepted-fail.json  ok-002-clean-pass-armed-sealed.json  ok-003-clean-pass-bounded-drops.json  ok-004-degraded-out-of-scope.json  ok-005-degraded-routed-elsewhere.json  ok-006-clean-reconstructed.json  ok-007-artifact-only-recordless.json  ok-008-artifact-fail-closed-method.json  ok-009-artifact-oov-label-fail.json  ok-010-artifact-retired-basis-fail.json  ok-011-shared-run-records.json  ok-012-selectors-present.json  ok-013-unknown-kind-extra-record.json  ok-014-three-record-odd-split.json  (+20 more)
witnessattestor/: aee.go  aee_match_test.go  aee_test.go  attest_test.go  go.mod  go.sum
(+96 files in other folders)
